--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -325,7 +325,7 @@ jobs:
           path: rspec_results
           merge-multiple: true
 
-      - run: ls tmp/rspec
+      - run: ls rspec_results
       - run: ls report
 
       - name: Merge RSpec results
