--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -282,7 +282,6 @@ jobs:
         with:
           name: test-report-${{ github.sha }}-${{ matrix.id }}
           path: report/rspec-${{ matrix.id }}.xml
-          if-no-files-found: error
           retention-days: 1
         # if: github.ref == 'refs/heads/main'
 
@@ -323,7 +322,7 @@ jobs:
       - name: Download RSpec xml results
         uses: actions/download-artifact@v4
         with:
-          pattern: rspec-results-${{ github.sha }}-*
+          pattern: test-report-${{ github.sha }}-*
           path: rspec_results
           merge-multiple: true
 
