--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -238,16 +238,18 @@ jobs:
         with:
           branch: test4
           name: test-time-report
-          path: tmp/rspec
+          path: rspec_xml
           merge-multiple: true
         continue-on-error: true
 
+      - run: ls rspec_xml
+      
       - run: |
           curl -L --output split-test https://github.com/mtsmfm/split-test/releases/download/v1.0.0/split-test-x86_64-unknown-linux-gnu
           chmod +x split-test
 
       - run: |
-          PATHS=$(./split-test --junit-xml-report-dir tmp/rspec --node-index "${{ matrix.id }}" --node-total "${{ matrix.parallelism }}" --tests-glob "spec/**/*_spec.rb" | sed "s;^$(pwd)/;;" | tr '\n' ' ')
+          PATHS=$(./split-test --junit-xml-report-dir rspec_xml --node-index "${{ matrix.id }}" --node-total "${{ matrix.parallelism }}" --tests-glob "spec/**/*_spec.rb" | sed "s;^$(pwd)/;;" | tr '\n' ' ')
           echo "paths=${PATHS}"
 
       - name: Rspec
@@ -328,6 +330,8 @@ jobs:
           path: rspec_results
           merge-multiple: true
 
+      - run: mv rspec_results/* rspec_xml
+
       - run: ls rspec_results
       - run: ls report
 
@@ -350,7 +354,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-time-report
-          path: tmp/rspec/combined_rspec_results.xml
+          path: rspec_xml
           retention-days: 7
           overwrite: true
        
