--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -269,7 +269,7 @@ jobs:
           --format RspecJunitFormatter \
           --out report/rspec-${{ matrix.id }}.xml \
           -f j -o rspec_results/${{ matrix.id }}.json -f p \
-          $(./split-test --junit-xml-report-dir tmp/rspec --node-index ${{ matrix.id }} --node-total ${{ matrix.parallelism }} --tests-glob 'spec/**/*_spec.rb' --debug)
+          $(./split-test --junit-xml-report-dir rspec_xml --node-index ${{ matrix.id }} --node-total ${{ matrix.parallelism }} --tests-glob 'spec/**/*_spec.rb' --debug)
           ls ./coverage
 
 
