--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -273,6 +273,8 @@ jobs:
           ls ./coverage
 
 
+      - run: cat rspec_results/${{ matrix.id }}.json
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         with:
