オプションで使えるようにした

--- a/.github/workflows/rspec2.yml
+++ b/.github/workflows/rspec2.yml
@@ -321,6 +321,8 @@ jobs:
       - run: |
           gem install nokogiri
           gem install fileutils
+          gem install optparse
+
       - name: Download RSpec results
         uses: actions/download-artifact@v4
         with:
@@ -346,7 +348,7 @@ jobs:
         run: |
           mkdir -p tmp/rspec
           chmod +x bin/rspec_results_merge_json.rb
-          ruby bin/rspec_results_merge_json.rb "report" "tmp/rspec/merged_rspec_results.json"
+          ruby bin/rspec_results_merge_json.rb --input_dir "report" --output_file "tmp/rspec/merged_rspec_results.json"
       
       - run: cat tmp/rspec/merged_rspec_results.json
       # - run: cat tmp/rspec/combined_rspec_results.xml
