--- a/.github/workflows/rspec_test.yml
+++ b/.github/workflows/rspec_test.yml
@@ -243,6 +243,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor/bundle
+          enableCrossOsArchive: true
           key: ${{ runner.os }}-v1-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-v1-
