--- a/.github/workflows/tes_comment.yml
+++ b/.github/workflows/tes_comment.yml
@@ -24,51 +24,117 @@ jobs:
         run: echo "RSpec results will be processed."
 
   merge-results:
+    need: check-comment
     if: github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == '/result')
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Ruby with caching
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: ${{ env.ruby-version }}
       - run: |
-          gem install nokogiri
-          gem install fileutils
-          gem install optparse
+          json_data='{
+              "version": "3.13.0",
+              "messages": ["Run options: exclude {:slow=true}"],
+              "seed": 12345,
+              "examples": [
+                  {
+                      "id": "./spec/requests/users_spec.rb[1:1:1]",
+                      "description": "returns 200 OK",
+                      "full_description": "Users GET /users returns 200 OK",
+                      "status": "passed",
+                      "file_path": "./spec/requests/users_spec.rb",
+                      "line_number": 10,
+                      "run_time": 0.200,
+                      "pending_message": null
+                  },
+                  {
+                      "id": "./spec/models/user_spec.rb[1:1:1]",
+                      "description": "is valid with valid attributes",
+                      "full_description": "User is valid with valid attributes",
+                      "status": "passed",
+                      "file_path": "./spec/models/user_spec.rb",
+                      "line_number": 5,
+                      "run_time": 0.150,
+                      "pending_message": null
+                  },
+                  {
+                      "id": "./spec/controllers/sessions_controller_spec.rb[1:1:1]",
+                      "description": "redirects to the user page on successful login",
+                      "full_description": "SessionsController POST /login redirects to the user page on successful login",
+                      "status": "passed",
+                      "file_path": "./spec/controllers/sessions_controller_spec.rb",
+                      "line_number": 20,
+                      "run_time": 0.250,
+                      "pending_message": null
+                  },
+                  {
+                      "id": "./spec/features/login_spec.rb[1:1:1]",
+                      "description": "shows error message on failed login",
+                      "full_description": "Login shows error message on failed login",
+                      "status": "pending",
+                      "file_path": "./spec/features/login_spec.rb",
+                      "line_number": 30,
+                      "run_time": 0.000,
+                      "pending_message": "Not yet implemented"
+                  }
+              ],
+              "profile": {
+                  "examples": [
+                      {
+                          "id": "./spec/requests/users_spec.rb[1:1:1]",
+                          "description": "returns 200 OK",
+                          "full_description": "Users GET /users returns 200 OK",
+                          "status": "passed",
+                          "file_path": "./spec/requests/users_spec.rb",
+                          "line_number": 10,
+                          "run_time": 0.200,
+                          "pending_message": null
+                      },
+                      {
+                          "id": "./spec/models/user_spec.rb[1:1:1]",
+                          "description": "is valid with valid attributes",
+                          "full_description": "User is valid with valid attributes",
+                          "status": "passed",
+                          "file_path": "./spec/models/user_spec.rb",
+                          "line_number": 5,
+                          "run_time": 0.150,
+                          "pending_message": null
+                      },
+                      {
+                          "id": "./spec/controllers/sessions_controller_spec.rb[1:1:1]",
+                          "description": "redirects to the user page on successful login",
+                          "full_description": "SessionsController POST /login redirects to the user page on successful login",
+                          "status": "passed",
+                          "file_path": "./spec/controllers/sessions_controller_spec.rb",
+                          "line_number": 20,
+                          "run_time": 0.250,
+                          "pending_message": null
+                      },
+                      {
+                          "id": "./spec/features/login_spec.rb[1:1:1]",
+                          "description": "shows error message on failed login",
+                          "full_description": "Login shows error message on failed login",
+                          "status": "pending",
+                          "file_path": "./spec/features/login_spec.rb",
+                          "line_number": 30,
+                          "run_time": 0.000,
+                          "pending_message": "Not yet implemented"
+                      }
+                  ],
+                  "slowest": 0.250,
+                  "total": 0.600
+              },
+              "summary": {
+                  "duration": 1,
+                  "example_count": 4,
+                  "failure_count": 0,
+                  "pending_count": 1,
+                  "errors_outside_of_examples_count": 0
+              },
+              "summary_line": "4 examples, 0 failures, 1 pending"
+          }'
 
-      - name: Download RSpec results
-        uses: actions/download-artifact@v4
-        with:
-          pattern: rspec-results-8ab40a4cfa7e894e0ae966a3328bfcb755b720f2-*
-          path: report
-          merge-multiple: true
-      
-      - name: Download RSpec xml results
-        uses: actions/download-artifact@v4
-        with:
-          pattern: test-report-8ab40a4cfa7e894e0ae966a3328bfcb755b720f2-*
-          path: rspec_results
-          merge-multiple: true
-
-      - run: |
-          mkdir rspec_xml
-          mv rspec_results/* rspec_xml
-
-      - run: ls rspec_xml
-      - run: ls report
-
-      - name: Merge RSpec results
-        run: |
-          mkdir -p tmp/rspec
-          chmod +x bin/rspec_results_merge_json.rb
-          ruby bin/rspec_results_merge_json.rb --input_dir "report" --output_file "tmp/rspec/merged_rspec_results.json"
-      
-      - run: cat tmp/rspec/merged_rspec_results.json
-      # - run: cat tmp/rspec/combined_rspec_results.xml
+          echo "$json_data" > merged_rspec_results.json
       - name: RSpec Report
         uses: SonicGarden/rspec-report-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          json-path: tmp/rspec/merged_rspec_results.json
+          json-path: merged_rspec_results.json
