--- a/.github/workflows/tes_comment.yml
+++ b/.github/workflows/tes_comment.yml
@@ -2,9 +2,8 @@ name: rspec
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
-  issue_comment:
-    types: [created]
+  # issue_comment:
+  #   types: [created]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
