--- a/.github/workflows/tes_comment.yml
+++ b/.github/workflows/tes_comment.yml
@@ -13,16 +13,16 @@ permissions:
   actions: write
 
 jobs:
-  check-comment:
-    # if: github.event_name == 'issue_comment' && github.event.comment.body == '/result'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Trigger RSpec job
-        run: echo "RSpec results will be processed."
+  # check-comment:
+  #   # if: github.event_name == 'issue_comment' && github.event.comment.body == '/result'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Trigger RSpec job
+  #       run: echo "RSpec results will be processed."
 
   merge-results:
-    needs: check-comment
-    if: github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == '/result')
+    # needs: check-comment
+    # if: github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == '/result')
     runs-on: ubuntu-latest
 
     steps:
