--- a/.github/workflows/tes_comment.yml
+++ b/.github/workflows/tes_comment.yml
@@ -17,8 +17,8 @@ jobs:
         run: echo "RSpec results will be processed."
 
   merge-results:
-    needs: check-comment
-    if: github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == '/result')
+    # needs: check-comment
+    # if: github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == '/result')
     runs-on: ubuntu-latest
 
     steps:
