--- a/.github/workflows/tes_comment.yml
+++ b/.github/workflows/tes_comment.yml
@@ -20,13 +20,19 @@ jobs:
     # needs: check-comment
     # if: github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == '/result')
     runs-on: ubuntu-latest
-    
+
+    - name: Generate token
+      id: generate_token
+      uses: actions/create-github-app-token@v1
+      with:
+        app-id: ${{ secrets.BOT_APP_ID }}
+        private-key: ${{ secrets.BOT_PRIVATE_KEY }}
     steps:
       - uses: actions/checkout@v3
       - run: ls | grep test_data.json
       - name: RSpec Report
         uses: hirosi1900day/test-report@v1.1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ steps.generate_token.outputs.token }}
           json-path: test_data.json
           pr-number: "125"
