--- a/.github/workflows/tes_comment.yml
+++ b/.github/workflows/tes_comment.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           app-id: ${{ secrets.BOT_APP_ID }}
           private-key: ${{ secrets.BOT_PRIVATE_KEY }}
+
+      - run: echo ${{ steps.generate_token.outputs.token }}
   merge-results:
     needs: generate-token
     # if: github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == '/result')
@@ -34,7 +36,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - run: ls | grep test_data.json
+      - run: |
+          ls | grep test_data.json
+          echo ${{ needs.generate-token.outputs.token }}
       - name: RSpec Report
         uses: hirosi1900day/test-report@v1.1
         with:
