--- a/.github/workflows/deply.yml
+++ b/.github/workflows/deply.yml
@@ -4,7 +4,7 @@ on:
   workflow_run:
     workflows: ["RSpec-Tests"]
     branches:
-      - master
+      - test444444
     types:
       - completed
 concurrency:
@@ -15,6 +15,7 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
+      - run: echo ${{ github.sha}}
       - name: Echo complete
         run: echo ${{ github.sha }}
       - name: Checkout
