--- a/.github/workflows/qa-test.yml
+++ b/.github/workflows/qa-test.yml
@@ -32,7 +32,7 @@ jobs:
           });
 
     - name: Add QA label
-      uses: actions/github-script@v6
+      uses: actions/github-script@v7
       with:
         script: |
           await github.rest.issues.addLabels({
@@ -44,12 +44,21 @@ jobs:
             ],
           });
 
-    - name: Find sha from pull request
+    - name: Find sha from pull request or master
       id: find-sha
-      uses: actions/github-script@v6
+      uses: actions/github-script@v7
       with:
         result-encoding: string
         script: |
+          const commentBody = context.payload.comment.body.trim();
+          if (commentBody === '/start-qa master') {
+            const { data: commit } = await github.rest.repos.getBranch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              branch: 'master',
+            });
+            return commit.commit.sha;
+          }
           const { data: pullRequest } = await github.rest.pulls.get({
             owner: context.repo.owner,
             repo: context.repo.repo,
