--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - .:/myapp
       - public-data:/myapp/public
       - tmp-data:/myapp/tmp
+      - /myapp/vendor/bundle
     command: /bin/bash -c "bundle install && rm -f tmp/pids/server.pid && bundle exec puma -C config/puma.rb"
     environment:
       TZ: Asia/Tokyo
