--- a/.github/workflows/release_notify_base.yml
+++ b/.github/workflows/release_notify_base.yml
@@ -29,7 +29,7 @@ jobs:
               ref: context.sha,
               environment: 'test_prod',
               auto_merge: false,
-              required_contexts: ['RSpec-Tests / rspec'],
+              required_contexts: ['rspec'],
             });
 
             const log_url = `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`
