--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -16,9 +16,13 @@ jobs:
   test2:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - run: |
           HASH=$(git log --pretty=format:"%H" -n 2 | tail -n 1)
           echo $HASH
+          echo ${{ github.sha }}
       - name: Get latest commit sha on master branch
         id: sha
         run: |
