--- a/.github/workflows/build_and_trigger.yml
+++ b/.github/workflows/build_and_trigger.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Trigger Repository Dispatch
         env:
           GITHUB_SHA: ${{ github.sha }}
+          GH_TOKEN: ${{ github.token}}
         run: |
           gh api \
             -X POST \
