--- a/.github/workflows/build_and_trigger.yml
+++ b/.github/workflows/build_and_trigger.yml
@@ -22,6 +22,6 @@ jobs:
           gh api \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            /repos/${{ github.repository }}/dispatches \
+            /repos/hirosi1900day/rails-nginx-docker-dev/dispatches \
             -f event_type="trigger-workflow" \
-            -F client_payload="{\"commit_hash\":\"${GITHUB_SHA}\"}"
+            -F client_payload='{"commit_hash":"'"${GITHUB_SHA}"'"}'
