--- a/.github/workflows/build_and_trigger.yml
+++ b/.github/workflows/build_and_trigger.yml
@@ -14,15 +14,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Trigger Repository Dispatch
-        env:
-          GITHUB_SHA: ${{ github.sha }}
-          GH_TOKEN: ${{ github.token}}
-        run: |
-          gh api \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            /repos/hirosi1900day/rails-nginx-docker-dev/dispatches \
-            -f event_type="trigger-workflow" \
-            -F client_payload="{\"commit_hash\":\"${GITHUB_SHA}\"}"
+      - name: Trigger Dispatch Event
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { owner, repo } = context.repo; // コンテキストからオーナーとリポジトリ名を取得
+            const sha = context.sha;
+
+            await github.rest.repos.createDispatchEvent({
+              owner: owner,
+              repo: repo,
+              event_type: 'trigger-workflow', // イベントのタイプ
+              client_payload: {
+                commit_hash: sha, // 任意のペイロード
+              },
+            });
 
