--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,6 @@ jobs:
 
   job3:
     runs-on: ubuntu-latest
-    needs: call-workflow
-    steps:
-      - run: echo "Running job3"
-      - run: sleep 30  # 長時間実行するジョブをシミュレーション
-      
+    uses: ./.github/workflows/_test2.yml
+    with:
+      concurrency_group: example-group2
