--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   call-workflow: 
     uses: ./.github/workflows/_test.yml
+    concurrency:
+      group: test
+      cancel-in-progress: true
     with:
       concurrency_group: example-group
       cancel-in-progress: true
@@ -15,4 +18,4 @@ jobs:
     uses: ./.github/workflows/_test2.yml
     with:
       concurrency_group: example-group2
-      
+
