--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -21,6 +21,10 @@ jobs:
 
       - name: Compare Commits
         run: |
+          if [ ${{ inputs.latest_check == false }} ]; then
+            echo "not check latest commit"
+            exit 0
+          fi
           echo "CURRENT_COMMIT=${{ github.sha }}"
           LATEST_COMMIT=$(gh api repos/${{ github.repository }}/commits/master --jq '.sha')
           echo "LATEST_COMMIT=$LATEST_COMMIT"
