--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -21,7 +21,7 @@ jobs:
           fi
           echo "CURRENT_COMMIT=${{ github.sha }}"
           LATEST_COMMIT=$(gh api repos/${{ github.repository }}/commits/master --jq '.sha')
-          echo "LATEST_COMMIT=$LATEST_COMMIT"
+          echo "LATEST_COMMIT=hoge"
 
           # 古いcommitの場合はエラーを返す
           if [ "${{ github.sha }}" != "$LATEST_COMMIT" ]; then
