--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -27,12 +27,12 @@ jobs:
           LATEST_COMMIT=$(gh api repos/${{ github.repository }}/commits/master --jq '.sha')
           echo "LATEST_COMMIT=$LATEST_COMMIT"
 
-          echo "test"
+
           # 古いcommitの場合はエラーを返す
           if [ "${{ github.sha }}" != "$LATEST_COMMIT" ]; then
             echo "The commit hash is not the latest"
             echo "value=false" >> "$GITHUB_OUTPUT"
-          elsif
+          else
             echo "The commit hash is the latest"
             echo "value=true" >> "$GITHUB_OUTPUT"
           fi
