--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -24,7 +24,7 @@ jobs:
             exit 0
           fi
           echo "CURRENT_COMMIT=${{ github.sha }}"
-          LATEST_COMMIT=$(gh api repos/${{ github.repository }}/commits/master --jq '.sha')
+          LATEST_COMMIT=hoge
           echo "LATEST_COMMIT=$LATEST_COMMIT"
 
 
