--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
 
   test:
     needs: [call-workflow, call-workflow2]
-    if: ${{ needs.call-workflow.outputs.deployed == 'true' }}
+    if: ${{ (success() || failure()) && needs.call-workflow.outputs.deployed == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "Running job-1"
