--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,8 @@ jobs:
 
   call-workflow2: 
     uses: ./.github/workflows/_test2.yml
-    with:
-      latest_check: true
+    # with:
+    #   latest_check: true
 
   test:
     needs: [call-workflow, call-workflow2]
