--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -14,6 +14,7 @@ on:
         value: ${{ jobs.check-latest-commit.outputs.value }}
 
 
+
 jobs:
   check-latest-commit:
     runs-on: ubuntu-22.04
@@ -29,7 +30,7 @@ jobs:
             exit 0
           fi
           echo "CURRENT_COMMIT=${{ github.sha }}"
-          LATEST_COMMIT=hoge
+          LATEST_COMMIT=$(gh api repos/${{ github.repository }}/commits/master --jq '.sha')
           echo "LATEST_COMMIT=$LATEST_COMMIT"
 
 
