--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -30,7 +30,7 @@ jobs:
             exit 0
           fi
           echo "CURRENT_COMMIT=${{ github.sha }}"
-          # LATEST_COMMIT=$(gh api repos/${{ github.repository }}/commits/master --jq '.sha')
+          LATEST_COMMIT=$(gh api repos/${{ github.repository }}/commits/master --jq '.sha')
           echo "LATEST_COMMIT=$LATEST_COMMIT"
 
 
@@ -51,7 +51,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Running job-1"
-      - run: exit 1  # 長時間実行するジョブをシミュレーション
+      - run: exit 0  # 長時間実行するジョブをシミュレーション
 
 
 
