--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
       latest_check: true
 
   call-workflow2: 
+    if: ${{ failure() }}
     uses: ./.github/workflows/_test2.yml
     # with:
     #   latest_check: true
